# NetSentinel

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  build-desktop.ps1  run-desktop.ps1
.github/workflows/: rust.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/frontend/: app.css  app.js  index.html
apps/desktop/frontend/pages/: alerts.js  dashboard.js  dns.js  network.js
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
crates/ai-engine/: Cargo.toml
crates/ai-engine/src/: anomaly.rs  lib.rs  model.rs
crates/dns-security/: Cargo.toml
crates/dns-security/src/: dns_monitor.rs  lib.rs  reputation.rs
crates/packet-engine/: Cargo.toml
crates/packet-engine/src/: capture.rs  dns.rs  lib.rs  models.rs  parser.rs  tcp.rs  udp.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs  pipeline.rs  worker.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs  registry.rs  traits.rs
crates/process-monitor/: Cargo.toml
crates/process-monitor/src/: lib.rs  linux.rs  mac.rs  windows.rs
crates/storage/: Cargo.toml
crates/storage/src/: database.rs  lib.rs  models.rs
crates/threat-engine/: Cargo.toml
crates/threat-engine/src/: alerts.rs  detector.rs  lib.rs  rules.rs
docs/: README.md
