[workspace]
resolver = "2"
members = [
    "crates/packet-engine",
    "crates/threat-engine",
    "crates/process-monitor",
    "crates/storage",
    "crates/ai-engine",
    "crates/pipeline",
    "crates/dns-security",
    "crates/plugins",
]
default-members = ["crates/packet-engine"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
pcap = "2"
pnet = "0.35"
etherparse = "0.20"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sysinfo = "0.32"
windows = { version = "0.58", features = ["Win32_NetworkManagement_IpHelper", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_Foundation", "Win32_System_Diagnostics_ToolHelp"] }
candle-core = "0.8"
linfa = "0.7"
smartcore = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
