[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"] }
rusqlite = { workspace = true, features = ["bundled"] }
chrono = { workspace = true }
uuid = { workspace = true }
packet-engine = { path = "../packet-engine" }
threat-engine = { path = "../threat-engine" }
